[gd_scene load_steps=9 format=3 uid="uid://vp54rd3udimm"]

[ext_resource type="Texture2D" uid="uid://dpawtabdhbhhv" path="res://assets/arte/fundo_menu.png" id="1_a0nsa"]
[ext_resource type="Script" path="res://scripts/menu_fases.gd" id="1_a3exr"]
[ext_resource type="Theme" uid="uid://dopnw7sydav2e" path="res://assets/arte/tema_botoes.tres" id="2_d0v1e"]
[ext_resource type="Texture2D" uid="uid://c3lm81p6yrsrn" path="res://assets/arte/botao_simples.png" id="4_3vwh1"]
[ext_resource type="Script" path="res://scripts/botao_fases.gd" id="4_vo6ty"]
[ext_resource type="Texture2D" uid="uid://dv2f2iasj3iho" path="res://assets/arte/foco2.png" id="5_7dmys"]
[ext_resource type="AudioStream" uid="uid://q68upoyi5s6i" path="res://assets/sfx/Menu/selecionar opcao.wav" id="5_i7sgl"]
[ext_resource type="AudioStream" uid="uid://bp0cgiabm5nt0" path="res://assets/sfx/Ambiente/choque 1.wav" id="7_jk2b8"]

[node name="menu_fases" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a3exr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = -646.0
offset_top = -145.5
offset_right = 2566.0
offset_bottom = 1225.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_a0nsa")
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -524.0
offset_top = -94.0
offset_right = 524.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 64

[node name="Button" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Button2")
focus_neighbor_top = NodePath("../../VBoxContainer/b2")
focus_neighbor_right = NodePath("../Button2")
focus_neighbor_bottom = NodePath("../../VBoxContainer/b2")
theme = ExtResource("2_d0v1e")
texture_normal = ExtResource("4_3vwh1")
texture_pressed = ExtResource("4_3vwh1")
texture_hover = ExtResource("5_7dmys")
texture_focused = ExtResource("5_7dmys")
script = ExtResource("4_vo6ty")

[node name="Label" type="Label" parent="HBoxContainer/Button"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = 30.0
offset_right = -7.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "√çNICIO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="TextureButton" parent="HBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_neighbor_left = NodePath("../Button")
focus_neighbor_top = NodePath("../../VBoxContainer/b2")
focus_neighbor_right = NodePath("../Button")
focus_neighbor_bottom = NodePath("../../VBoxContainer/b2")
theme = ExtResource("2_d0v1e")
texture_normal = ExtResource("4_3vwh1")
texture_pressed = ExtResource("4_3vwh1")
texture_hover = ExtResource("5_7dmys")
texture_focused = ExtResource("5_7dmys")

[node name="Label" type="Label" parent="HBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 28.0
offset_right = 1.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "FIM
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="escolha" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_i7sgl")

[node name="blok" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jk2b8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -468.5
offset_right = 123.0
offset_bottom = 468.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 750

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
flat = true

[node name="b2" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer/Button")
focus_neighbor_bottom = NodePath("../../HBoxContainer/Button")
theme = ExtResource("2_d0v1e")
texture_normal = ExtResource("4_3vwh1")
texture_pressed = ExtResource("4_3vwh1")
texture_hover = ExtResource("5_7dmys")
texture_focused = ExtResource("5_7dmys")

[node name="Label" type="Label" parent="VBoxContainer/b2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "VOLTAR"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/b2" to="." method="_on_b_2_pressed"]
[connection signal="pressed" from="VBoxContainer/b2" to="." method="_on_button_2_pressed"]
